--- a/index.html
+++ b/index.html
@@ -90,27 +90,27 @@
                 <div class="container gallery">
                     <div class="row">
                         <!-- Primeira imagem -->
-                        <div class="col-lg-8 col-md-12 mb-4 mb-lg-0">
+                        <div class="col-lg-8 col-md-12 mb-4 mb-lg-0 produtos">
                             <img src="./imgs/cheescake.jpg" class="w-100 rounded mb-4" alt="produto Little Sweet"
                                 height="400px" />
                         </div>
                         <!-- Segunda imagem -->
-                        <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+                        <div class="col-lg-4 col-md-12 mb-4 mb-lg-0 produtos">
                             <img src="./imgs/cupcake.jpg" class="w-100 rounded mb-4" alt="produto Little Sweet"
                                 height="400px" />
                         </div>
                         <!-- Terceira imagem -->
-                        <div class="col-lg-5 col-md-12 mb-4 mb-lg-0">
+                        <div class="col-lg-5 col-md-12 mb-4 mb-lg-0 produtos">
                             <img src="./imgs/piePiece.jpg" class="w-100 rounded mb-4" alt="produto Little Sweet"
                                 height="190px" />
                         </div>
                         <!-- Quarta imagem -->
-                        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0 produtos">
                             <img src="./imgs/pie.avif" class="w-100 rounded mb-4" alt="produto Little Sweet"
                                 height="190px" />
                         </div>
                         <!-- Quinta imagem -->
-                        <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+                        <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 produtos">
                             <img src="./imgs/cheescalePiece.jpg" class="w-100 rounded mb-4" alt="produto Little Sweet"
                                 height="190px" />
                         </div>
