--- a/index.html
+++ b/index.html
@@ -66,18 +66,9 @@
                     <!--Quem somos-->
                     <div id="quemSomos" class="quemSomos">
                         <h2 class="subtitle">QUEM SOMOS</h2>
-                        <p>A jornada da Luh Mimu's começou em 20 de março de 2019, quando Luana corajosamente deixou seu
-                            emprego formal para seguir seu sonho. No início, ela se dedicava a fazer bolos no pote por
-                            encomenda, mas à medida que seu negócio ganhava vida, ela se aventurou a expandir o
-                            cardápio, adicionando docinhos, salgados, cupcakes e a conveniência do serviço de entrega.
+                        <p>A Sweet Creations é uma confeitaria que combina a doçura com a arte da culinária, oferecendo momentos memoráveis de sabor e beleza. Fundada por entusiastas da culinária e da arte, a empresa é reconhecida por transformar ingredientes simples em obras-primas deliciosas, atendendo a uma variedade de ocasiões, desde casamentos deslumbrantes até simples desejos por indulgência doce. Com um compromisso inabalável com a qualidade, a Sweet Creations utiliza apenas os melhores ingredientes e técnicas culinárias, garantindo que cada criação seja uma experiência sublime para os sentidos. Além disso, a empresa valoriza a estética tanto quanto o sabor, criando bolos que são verdadeiras obras de arte comestíveis, desde designs clássicos até criações temáticas extravagantes.
 
-                            Hoje, os bolos por encomenda continuam sendo a estrela principal da Luh Mimu's, oferecendo
-                            uma variedade encantadora de sabores e decorações. O que torna tudo ainda mais especial é a
-                            paixão da Luh, que compartilha conosco: "O amor de mãe me moveu a trabalhar incansavelmente,
-                            sempre buscando entregar produtos deliciosos e de qualidade, feitos com um toque de carinho.
-                            Acreditar profundamente no seu negócio, manter o foco, e estar disposto a adaptar-se quando
-                            necessário são as chaves do sucesso. Não desista, pois o sucesso muitas vezes chega quando
-                            você menos espera. Aqueles que perseveram conseguem, verdadeiramente, viver seu propósito."
+                           
                         </p>
                     </div>
                 </div>
@@ -198,7 +189,7 @@
             <hr>
             <!-- Copyright -->
             <div class="container copyright text-center p-3">
-                <span>© Copyright 2022 - Little Sweet Confeitaria</span>
+                <span>© Copyright 2024 - Little Sweet Confeitaria</span>
                 <div class="social-icons col-md-12">
                     <a href=""><img src="./imgs/facebook.svg" alt="facebook">
                     </a>
